--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "scope": "/hifaz/",
     "icons": [
         {
-            "src": "/hifaz/android-chrome-192x192.png",
+            "src": "/hifaz/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/hifaz/android-chrome-512x512.png",
+            "src": "/hifaz/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
